# EvolvePlusPlus

./: CMakeLists.txt  README.md  main.cpp
include/: Duration.h  Evaluator.cpp  Evaluator.h  Individual.h  Note.h  Pitch.h  SoundGenerator.h  Utility.h
src/: Duration.cpp  Individual.cpp  Note.cpp  Pitch.cpp  SoundGenerator.cpp  Utility.cpp
